--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "5.32.0",
+    "@tanstack/react-query-devtools": "5.32.0",
     "@tanstack/react-table": "^8.16.0",
     "@tremor/react": "^3.16.1",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
