--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,41 +5,39 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     services:
-        postgres:
-          image: postgres:16.2-alpine3.19
-          env:
-            POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: postgres
-            POSTGRES_DB: sgrap_db
-          ports:
-            - 5432:5432
+      postgres:
+        image: postgres:16.2-alpine3.19
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: sgrap_db
+        ports:
+          - 5432:5432
 
-        smtp4dev:
-          image: rnwood/smtp4dev:v3
-          ports:
-            - "5000:5000"
-            - "2525:2525"
+      smtp4dev:
+        image: rnwood/smtp4dev:v3
+        ports:
+          - "5000:5000"
+          - "2525:2525"
 
     strategy:
       matrix:
         node-version: [16.x, 18.x, 20.x]
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm run build --if-present
-    - run: npm test
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: oven-sh/setup-bun@v1
+
+      - run: bun install
+      - run: bun db:push
+      - run: bun build --if-present
