--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,11 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/sgrap_db?schema=public"
+  AUTH_SECRET: "/bDrPSf/91hB1NdUrudEhZgSMLsEwfcivgLMupwsXtA="
+  DOMAIN_URL: "http://localhost:3000"
+
 jobs:
   build:
     runs-on: ubuntu-latest
