--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [18.x, 20.x]
 
     steps:
       - uses: actions/checkout@v4
@@ -47,4 +47,4 @@ jobs:
           cache: "npm"
       - run: npm install
       - run: npx prisma db push
-      - run: npm run build
+      - run: npm run dev
