--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,4 +47,5 @@ jobs:
           cache: "npm"
       - run: npm install
       - run: npx prisma db push
-      - run: npm run dev
+      - run: npm run lint
+      - run: npm run build
