--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: SGRAP CI
 
 on:
   push:
@@ -45,7 +45,15 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm install
-      - run: npx prisma db push
-      - run: npm run lint
-      - run: npm run build
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Migrate database
+        run: npx prisma db push
+
+      - name: Lint
+        run: npm run lint
+
+      - name: Build
+        run: npm run build
