--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/pug": "^2.0.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "encoding": "^0.1.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
