--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -37,10 +38,13 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "export-to-csv": "^1.2.4",
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "next-auth": "^5.0.0-beta.16",
     "next-safe-action": "^6.2.0",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "pug": "^3.0.2",
     "react": "^18",
@@ -49,6 +53,7 @@
     "react-icons": "^5.1.0",
     "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
