--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
