--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nodemailer": "^6.9.13",
     "pug": "^3.0.2",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
