--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -41,7 +42,7 @@
     "cmdk": "^1.0.0",
     "export-to-csv": "^1.2.4",
     "lucide-react": "^0.372.0",
-    "next": "14.2.2",
+    "next": "14.2.3",
     "next-auth": "^5.0.0-beta.16",
     "next-safe-action": "^6.2.0",
     "next-themes": "^0.3.0",
