--- a/compose.yml
+++ b/compose.yml
@@ -15,3 +15,13 @@ services:
       ports:
         - "5001:5000"
         - "2526:2525"
+
+    pgadmin:
+      image: dpage/pgadmin4
+      container_name: pgadmin
+      restart: always
+      ports:
+        - "5050:80"
+      environment:
+        PGADMIN_DEFAULT_EMAIL: "admin@localhost.com"
+        PGADMIN_DEFAULT_PASSWORD: "1234"
