--- a/compose.yaml
+++ b/compose.yaml
@@ -35,8 +35,8 @@ services:
     image: postgres:16.2-alpine3.19
     user: postgres
     ports:
-      - "5436:5432"
-    container_name: sgrap-database
+      - "5433:5432"
+    container_name: sgrap-db
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
@@ -48,10 +48,10 @@ services:
 
   smtp4dev:
     image: rnwood/smtp4dev
-    container_name: sgrap-smtp
+    container_name: smtp4dev
     ports:
-      - "5001:5000"
-      - "2526:2525"
+      - "5000:80"
+      - "2525:25"
 
   pgadmin:
     image: dpage/pgadmin4
