--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:migrate": "bunx prisma generate && bunx prisma migrate dev --preview-feature",
-    "db:push": "bunx prisma db push",
-    "db:studio": "bunx prisma studio"
+    "db:generate": "bunx drizzle-kit generate:pg",
+    "db:migrate": "cross-env DB_MIGRATING=true bun ./db/migrate.ts",
+    "db:studio": "bunx drizzle-kit studio",
+    "db:seed": "bun ./db/seed.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.30.0",
     "@auth/prisma-adapter": "^2.0.0",
+    "@hono/auth-js": "^1.0.7",
+    "@hono/zod-validator": "^0.2.1",
     "@hookform/resolvers": "^3.3.4",
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@nivo/bar": "^0.85.1",
     "@nivo/core": "^0.85.1",
     "@nivo/line": "^0.85.1",
     "@nivo/pie": "^0.85.1",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "5.13.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -41,13 +47,22 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cross-env": "^7.0.3",
+    "dotenv-expand": "^11.0.6",
+    "drizzle-orm": "^0.30.10",
+    "drizzle-zod": "^0.5.1",
     "export-to-csv": "^1.2.4",
+    "hono": "^4.3.4",
+    "lucia": "^3.2.0",
     "lucide-react": "^0.372.0",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.16",
     "next-safe-action": "^6.2.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
+    "oslo": "^1.2.0",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
     "pug": "^3.0.2",
     "react": "^18",
     "react-countup": "^6.5.3",
@@ -55,21 +70,25 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.12.7",
     "resend": "^3.2.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
-    "zod": "^3.23.3"
+    "zod": "^3.23.3",
+    "zod-prisma-types": "^3.1.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/email-templates": "^10.0.4",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
+    "@types/pg": "^8.11.6",
     "@types/pug": "^2.0.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.20.17",
     "encoding": "^0.1.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
