feat: Migrate to Lucia auth for authentication, refactor: Transition to Drizzle ORM, feat: Implement bulk create via file upload, refactor: Adopt Hono for API handling, feat: Introduce bulk delete feature, feat: Various other changes and enhancements

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
 env:
   DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/sgrap_db?schema=public"
   AUTH_SECRET: "/bDrPSf/91hB1NdUrudEhZgSMLsEwfcivgLMupwsXtA="
-  DOMAIN_URL: "http://localhost:3000"
+  NEXT_PUBLIC_APP_URL: "http://localhost:3000"
 
 jobs:
   build:
