--- a/compose.yaml
+++ b/compose.yaml
@@ -41,17 +41,18 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=sgrap_db
-    # secrets:
-    #   - db-password
     volumes:
       - db-data:/var/lib/postgresql/data
 
   smtp4dev:
     image: rnwood/smtp4dev
     container_name: smtp4dev
+    restart: always
     ports:
       - "5000:80"
       - "2525:25"
+    volumes:
+        - smtp4dev-data:/smtp4dev
 
   pgadmin:
     image: dpage/pgadmin4
@@ -65,6 +66,4 @@ services:
 
 volumes:
   db-data:
-# secrets:
-#   db-password:
-#     file: db/password.txt
+  smtp4dev-data:
