--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
         run: npm install
 
       - name: Migrate database
-        run: npx drizzle-kit db migrate
+        run: npx drizzle-kit migrate
 
       - name: Lint
         run: npm run lint
