--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -58,6 +59,7 @@
     "ioredis": "^5.6.1",
     "lucia": "^3.2.2",
     "lucide-react": "^0.372.0",
+    "motion": "^12.23.0",
     "next": "^15.3.4",
     "next-safe-action": "^7.10.8",
     "next-themes": "^0.3.0",
